--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
 /*Polygondwanaland*/
-
+body{
+    background-color: black;
+}
 .grid2{
     height: 640px;
     width: 360px;
@@ -14,9 +16,8 @@
 .polyImg{
     grid-area: 1 / 1 / span 1 / span 6;
     background-image: url(images/poly.PNG);
-    background-size: cover;
-    
-    
+    background-size:cover;
+        
 }
   /*Code from the web to make vinyl rotate*/
   /*https://stackoverflow.com/questions/10123700/how-to-make-a-picture-rotate-continuously*/
@@ -34,9 +35,9 @@
     background-image: url(images/polyVinyl.png);
         grid-area: 2 / 1 / span 6 / span 6;
     background-position:center;
-    background-size: contain;
+    background-size:contain;
     background-repeat:no-repeat;
-
+    
     /*Code from the web to make it rotate*/
     animation-name: rotate; 
     animation-duration: 5s; 
@@ -97,14 +98,43 @@
 }
 
 #button11{
-    grid-area: 2 / 2 / span 1 / span 4;
+    grid-area: 2 / 2 / span 1 / span 2;
     height: 25%;
-    width:50%;
+    width:75%;
     margin-left: 2%;
 }
+
+#button12{
+    grid-area: 2 / 4 / span 1 / span 1;
+    height: 25%;
+    width:100%;
+    /* padding-top: 50%; */
+   }
 
 /*Audio on page - hiding*/
 
 .hiddenAudio{
     display: none;
+}
+
+@media (max-width: 640px) {
+    .grid2{
+    height:fit-content;
+    width:100%;
+margin: 0px;
+padding: 0px;}
+
+    #button11{
+        grid-area: 2 / 2 / span 1 / span 1;
+        height: 50%;
+        width:100%;
+        
+    }
+
+    #button12{
+        grid-area: 2 / 4 / span 1 / span 1;
+        height: 50%;
+        width:100%;
+        
+    }
 }
